--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -17,7 +17,7 @@
         "subtitle": "Simple, secure, and ephemeral document sharing",
         "recipients": {
             "title": "For Recipients",
-            "description": "Register with your ProtonMail to receive encrypted documents. Share your public key via QR code or URL."
+            "description": "Register with your email to receive notifications of encrypted documents sent to you. Share your public key via QR code or URL."
         },
         "senders": {
             "title": "For Senders",
@@ -53,7 +53,7 @@
         "features": {
             "encryption": "End-to-end encryption using public/private key pairs",
             "private_keys": "Private keys never leave your device",
-            "protonmail": "ProtonMail integration for secure notifications",
+            "email_integration": "Secure email integration for notifications",
             "no_accounts": "No accounts, no logins, no metadata stored",
             "auto_delete": "Automatic 24-hour file deletion"
         },
@@ -89,6 +89,6 @@
             "small_business": "Small business",
             "personal": "Personal use"
         },
-        "copyright": "© 2025 NymShare Labs, Inc."
+        "copyright": " 2025 NymShare Labs, Inc."
     }
 } 
